--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,14 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Volplane ControllerEditor</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
 </head>
 
 <body>
