Creating base layout of the controller editor. - Adding fonts (webpack svg loader override by chaining) - Adding base components (mockup)

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,9 @@
   <noscript>
     <strong>We're sorry but the Volplane ControllerEditor doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
   </noscript>
+  <header>
+    <h1>Volplane ControllerEditor v1.1</h1>
+  </header>
   <div id="app"></div>
   <!-- built files will be auto injected -->
 </body>
